[package]
name = "testing_performance"
version = "0.1.5"
edition = "2021"
description = "A performances testing library"
license = "GPL-2.0-or-later"
categories = ["development-tools"]
repository = "https://github.com/taishingi/zuu/tree/master/testing_performance"
documentation = "https://docs.rs/testing_performance/"
[lib]
name = "performances"
path = "src/performances.rs"
crate-type = ["lib"]
test = true                  # Is tested by default.
doctest = true               # Documentation examples are tested by default.
bench = true                 # Is benchmarked by default.
doc = true                   # Is documented by default.
harness = true               # Use libtest harness.
proc-macro = true

[dependencies]
colored_truecolor = "0.1.0"
